--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,14 +3,15 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     </PropertyGroup>
     <ItemGroup>
-        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
-        <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" />
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
-        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.1" />
-        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.11.1" />
-        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.0" />
-        <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.12" />
-        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.11.0" />
-        <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0" />
+        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1"/>
+        <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0"/>
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0"/>
+        <PackageVersion Include="OpenTelemetry.Exporter.Console" Version="1.11.1"/>
+        <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.1"/>
+        <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.11.1"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.0"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.12"/>
+        <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.11.0"/>
+        <PackageVersion Include="Serilog.AspNetCore" Version="9.0.0"/>
     </ItemGroup>
 </Project>
