--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,31 @@
 ﻿name: "leviatrace"
 
+networks:
+  levianetwork:
+    driver: bridge
+
 services:
-  
+
   leviatrace.api:
-    image: leviatrace.api
+    container_name: leviatrace.api
     build:
       context: .
       dockerfile: Leviatrace.Api/Dockerfile
+    environment:
+      OTEL_DOTNET_AUTO_HOME: /otel-dotnet-auto
+      OTEL_SERVICE_NAME: "Leviatrace.Api"
+      OTEL_EXPORTER_OTLP_ENDPOINT: "http://jaeger:4317"
+    ports:
+      - "7000:8080"
+    networks:
+      - levianetwork
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "4317:4317"
+      - "4318:4318"
+      - "16686:16686"
+    networks:
+      - levianetwork
