--- a/compose.yaml
+++ b/compose.yaml
@@ -6,14 +6,14 @@ networks:
 
 services:
 
-  leviatrace.api:
-    container_name: leviatrace.api
+  leviathan.api:
+    container_name: leviathan.api
     build:
       context: .
-      dockerfile: Leviatrace.Api/Dockerfile
+      dockerfile: Leviathan.Api/Dockerfile
     environment:
       OTEL_DOTNET_AUTO_HOME: /otel-dotnet-auto
-      OTEL_SERVICE_NAME: "Leviatrace.Api"
+      OTEL_SERVICE_NAME: "Leviathan.Api"
       OTEL_EXPORTER_OTLP_ENDPOINT: "http://jaeger:4317"
     ports:
       - "7000:8080"
